Added snake project

--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-Hello World
+<!doctype html>
+<html>
+<head><meta charset="utf-8" />
+  <script src="./js/moonshine.js"></script>
+  <script src="./js/debug/debug.moonshine.js"></script>
+  <script src="./js/debug/local.debug.moonshine.js" data-ui-url="/js/debug/ui"></script>
+  <script src="./js/love.js"></script>
+  <style type="text/css">
+    img {
+      display: none;
+    }
+    canvas {
+      image-rendering: optimizeSpeed;
+      image-rendering:-o-crisp-edges;
+      image-rendering:-webkit-optimize-contrast;
+      -ms-interpolation-mode: nearest-neighbor;
+    }
+    @font-face {
+      font-family: 'Vera';
+      src: url('coffeescript/love.js/graphics/Vera.ttf');
+    }
+    @font-face {
+      font-family: 'Cash Currency.ttf';
+      src: url('Cash Currency.ttf');
+    }
+  </style>
+</head>
+<body>
+  <script src="./js/amore.js"></script>
+  <h3>Controls:</h3>
+  <p>W - forward</p>
+  <p>A - left</p>
+  <p>S - backward</p>
+  <p>D - right</p>
+</body>
+</html>
