Fixed error in debug

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
     @font-face {
       font-family: 'Vera';
-      src: url('coffeescript/love.js/graphics/Vera.ttf');
+      src: url('./coffeescript/love.js/graphics/Vera.ttf');
     }
     @font-face {
       font-family: 'Cash Currency.ttf';
